--- a/Public/CSS/ContactUs.css
+++ b/Public/CSS/ContactUs.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 :root{
-  --dark : #CD853F;
-  --light :#F4A460;
+  --dark : #ccccccc7;
+  --light :#faf6f381;
   --lbny :#2e70a9;
 }
 
@@ -21,38 +21,39 @@ body{
 
 /* ! HEADER CSS */
 
-header {
+header{
   display: flex;
-  align-items: center;
   justify-content: space-between;
-  background-color: #CD853F;
-  /* min-height: ; */
+  /* background-color: #CD853F; */
+  background-color: #000000;
+  color:#fff;
 }
 
 /* * START LOGO */
-.logot {
+.logot{
   display: flex;
   align-items: center;
   cursor: pointer;
 }
 
-.logot img {
+.logot img{
   width: 50px;
   padding: 4%;
 }
 
-.logot h2 {
+.logot h2{
   padding-left: calc(1px + 0.6vw);
   padding-right: calc(1px + 0.6vw);
   font-size: calc(5px + 1.3vw);
   font-weight: 600;
 }
-
 /* *END LOGO */
 
 /* * START NAVIGATION BAR */
 .menuDiv {
-  background-color: #F4A460;
+  /* margin-left: 70px; */
+  margin-left: calc(7px + 8vw);
+  background-color: #000000;
   color: #2e70a9;
   border-radius: 10px;
 }
@@ -60,25 +61,24 @@ header {
 .menuDiv ul {
   display: flex;
 }
-
 .menuDiv ul li {
   list-style: none;
 }
 
 .menuDiv ul li a {
-  color: black;
+  color: rgb(255, 255, 255) ;
   text-decoration: none;
   padding: calc(3px + 1.12vw);
-  display: flex;
+  display:  flex;
   align-content: center;
-  font-size: calc(2px + 1vw);
+  font-size: calc(2px + 1.1vw);
   transition: ease-in-out all .3s;
   text-align: center;
 }
 
 .menuDiv ul li a:hover {
   color: #fff;
-  font-size: calc(4px + 0.91vw);
+  font-size: calc(4px + 1vw);
   background: #2e70a9;
 }
 
@@ -95,22 +95,27 @@ header {
   border-top-right-radius: 7px;
   border-bottom-right-radius: 7px;
 }
-
 /* * END NAVIGATION BAR */
 
 /* * START PROFILE MENU */
-.profile {
-  /* background-color: chocolate; */
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
-}
-
-.prof_photo {
-  width: calc(8px + 3vw);
-  padding-right: calc(0.5px + 1vw);
-  padding-left: calc(0.5px + 1vw);
-}
+.profile , .cart {
+    /* background-color: chocolate; */
+    display: flex;
+    align-items:center;
+    justify-content:flex-end;
+  }
+  
+  .prof_photo {
+    width: calc(8px + 3vw);
+    padding-right: calc(0.5px + 1vw);
+    padding-left: calc(0.5px + 1vw);
+  }
+  
+  .cart_photo{
+    width: calc(8px + 3vw);
+    padding-right: calc(1px + 1vw);
+    cursor:pointer;  
+  }
 
 .profile form input {
   width: calc(5px + 13vw);
@@ -134,10 +139,10 @@ input::-webkit-input-placeholder {
   cursor: pointer;
   border-top-right-radius: 5px;
   border-bottom-right-radius: 5px;
-  width: calc(25px + 0.8vw);
+  width: calc(26px + 0.8vw);
 }
 
-.profile form button img {
+.profile form button img{
   width: calc(5px + 1.3vw);
 }
 
@@ -149,12 +154,14 @@ input::-webkit-input-placeholder {
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: #cd753f;
+  background-color: #000000;
+  color: #fff;
   border-radius: 10px;
+  margin-left: calc(2px + 0.5vw);
 }
 
 .dropdown-content a {
-  color: black;
+  color: #fff;
   padding: calc(1px + 0.5vw);
   text-decoration: none;
   display: block;
@@ -162,21 +169,24 @@ input::-webkit-input-placeholder {
 }
 
 .dropdown-content .t:hover {
-  background-color: #CD853F;
+  background-color: #2e70a9;
   border-top-right-radius: 10px;
   border-top-left-radius: 10px;
 }
 
 .dropdown-content .b:hover {
-  background-color: #CD853F;
+  background-color: #2e70a9;
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
+}
+
+.dropdown-content .m:hover {
+  background-color: #2e70a9;
 }
 
 .dropdown:hover .dropdown-content {
   display: block;
 }
-
 /* *END PROFILE MENU */
 
 .ContactUs h2{
@@ -202,7 +212,7 @@ input::-webkit-input-placeholder {
   align-items: center;
   flex-direction: column;
   border: 3px solid;
-  color: brown;
+  color: rgb(80, 80, 80);
   background-color: var(--dark);
   font-weight: bold;
   box-sizing: border-box;
@@ -217,16 +227,14 @@ input::-webkit-input-placeholder {
 
 }
 
-/* ! FOOTER CSS */
-
 footer {
   display: flex;
   padding: calc(1px + 0.8vw);
   justify-content: space-evenly;
-  background-color: #B22222;
+  background-color: #000000;
+  color:#fff;
   position: relative;
-  bottom: 0;
-  flex: 0 ;
+  /* top: 470px; */
 }
 
 .about {
@@ -284,6 +292,4 @@ footer {
 .help ul li a{
   text-decoration: none;
   color: #FFF0F5;
-}
-
-  
+ }
