--- a/Public/CSS/Homepage.css
+++ b/Public/CSS/Homepage.css
@@ -7,44 +7,49 @@
   font-size: smaller;
 }
 
-body{
+body {
   background-image: url("/Images/back.png");
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
 }
 
-                                  /* ! HEADER CSS */
+/* ! HEADER CSS */
 
-header{
+header {
   display: flex;
   justify-content: space-between;
-  background-color: #CD853F;
+  /* background-color: #CD853F; */
+  background-color: #000000;
+  color: #fff;
 }
 
 /* * START LOGO */
-.logot{
+.logot {
   display: flex;
   align-items: center;
   cursor: pointer;
 }
 
-.logot img{
+.logot img {
   width: 50px;
   padding: 4%;
 }
 
-.logot h2{
+.logot h2 {
   padding-left: calc(1px + 0.6vw);
   padding-right: calc(1px + 0.6vw);
   font-size: calc(5px + 1.3vw);
   font-weight: 600;
 }
+
 /* *END LOGO */
 
 /* * START NAVIGATION BAR */
 .menuDiv {
-  background-color: #F4A460;
+  /* margin-left: 70px; */
+  margin-left: calc(7px + 8vw);
+  background-color: #000000;
   color: #2e70a9;
   border-radius: 10px;
 }
@@ -52,15 +57,16 @@ header{
 .menuDiv ul {
   display: flex;
 }
+
 .menuDiv ul li {
   list-style: none;
 }
 
 .menuDiv ul li a {
-  color: black ;
+  color: rgb(255, 255, 255);
   text-decoration: none;
   padding: calc(3px + 1.12vw);
-  display:  flex;
+  display: flex;
   align-content: center;
   font-size: calc(2px + 1.1vw);
   transition: ease-in-out all .3s;
@@ -86,10 +92,12 @@ header{
   border-top-right-radius: 7px;
   border-bottom-right-radius: 7px;
 }
+
 /* * END NAVIGATION BAR */
 
 /* * START PROFILE MENU */
-.profile {
+.profile,
+.cart {
   /* background-color: chocolate; */
   display: flex;
   align-items: center;
@@ -100,6 +108,12 @@ header{
   width: calc(8px + 3vw);
   padding-right: calc(0.5px + 1vw);
   padding-left: calc(0.5px + 1vw);
+}
+
+.cart_photo {
+  width: calc(8px + 3vw);
+  padding-right: calc(1px + 1vw);
+  cursor: pointer;
 }
 
 .profile form input {
@@ -127,7 +141,7 @@ input::-webkit-input-placeholder {
   width: calc(26px + 0.8vw);
 }
 
-.profile form button img{
+.profile form button img {
   width: calc(5px + 1.3vw);
 }
 
@@ -139,12 +153,14 @@ input::-webkit-input-placeholder {
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: #cd753f;
+  background-color: #000000;
+  color: #fff;
   border-radius: 10px;
+  margin-left: calc(2px + 0.5vw);
 }
 
 .dropdown-content a {
-  color: black;
+  color: #fff;
   padding: calc(1px + 0.5vw);
   text-decoration: none;
   display: block;
@@ -152,23 +168,28 @@ input::-webkit-input-placeholder {
 }
 
 .dropdown-content .t:hover {
-  background-color: #CD853F;
+  background-color: #2e70a9;
   border-top-right-radius: 10px;
   border-top-left-radius: 10px;
 }
 
 .dropdown-content .b:hover {
-  background-color: #CD853F;
+  background-color: #2e70a9;
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
+}
+
+.dropdown-content .m:hover {
+  background-color: #2e70a9;
 }
 
 .dropdown:hover .dropdown-content {
   display: block;
 }
+
 /* *END PROFILE MENU */
 
-                                /* ! MAIN CSS */
+/* ! MAIN CSS */
 
 /* * START SLIDE SHOW */
 .slideshow-container {
@@ -184,7 +205,7 @@ input::-webkit-input-placeholder {
   display: none;
 }
 
-.def-img{
+.def-img {
   display: block;
 }
 
@@ -224,14 +245,14 @@ input::-webkit-input-placeholder {
 }
 
 .text {
-  background: linear-gradient(87.4deg, rgb(255, 241, 165) 1.9%, rgb(200, 125, 76) 49.7%, rgb(83, 54, 54) 100.5%);
+  background: linear-gradient(87.4deg, rgb(64, 64, 64) 1.9%, rgb(96, 96, 96) 49.7%, rgb(128, 128, 128) 100.5%);
   color: black;
   font-size: calc(11px + 1.1vw);
   font-weight: 600;
   position: relative;
   bottom: 3px;
   text-align: center;
-  padding:4%;
+  padding: 4%;
   border-radius: 0 0 6px 6px;
   margin-bottom: 5%;
 }
@@ -250,11 +271,12 @@ input::-webkit-input-placeholder {
     opacity: 1
   }
 }
+
 /* * END SLIDE SHOW */
 
 /* * START BEST SELLERS  */
 .title {
-  background-color: #B22222;
+  background-color: #c7c7c78f;
   text-align: center;
   padding: calc(15px + 1.5vw);
   font-size: calc(15px + 1vw);
@@ -263,31 +285,31 @@ input::-webkit-input-placeholder {
   color: #fff;
 }
 
-.Grid{
+.Grid {
   display: flex;
   justify-content: space-between;
   margin: calc(5px + 5vw);
 }
 
-.img-wrapper img{
+.img-wrapper img {
   height: calc(20px + 30vw);
   border-radius: 10px;
 }
 
-.img-wrapper{
+.img-wrapper {
   overflow: hidden;
   position: relative;
   border-radius: 10px;
 }
 
-.img-wrapper > img{
+.img-wrapper>img {
   display: block;
   aspect-ratio: 3/4;
   object-fit: cover;
   object-position: center;
 }
 
-.img-wrapper > .content{
+.img-wrapper>.content {
   position: absolute;
   inset: 0;
   font-size: calc(10px + 1vw);
@@ -297,43 +319,46 @@ input::-webkit-input-placeholder {
   align-items: center;
 }
 
-.img-wrapper > img,
-.img-wrapper > .content {
+.img-wrapper>img,
+.img-wrapper>.content {
   transition: 300ms ease-in-out;
 }
 
-.img-wrapper:hover > img.blur {
+.img-wrapper:hover>img.blur {
   transition: 300ms ease-in-out;
   filter: blur(2px);
 }
 
-.img-wrapper:hover > img.zoom {
+.img-wrapper:hover>img.zoom {
   transform: scale(1.1);
   transition: 300ms ease-in-out;
 }
 
-.img-wrapper > .content.fade {
+.img-wrapper>.content.fade {
   opacity: 0;
   display: none;
 }
 
-.img-wrapper:hover > .content.fade {
+.img-wrapper:hover>.content.fade {
   opacity: 10;
   display: flex;
   cursor: pointer;
   transform: scale(1.1);
   transition: 300ms ease-in-out;
 }
+
 /* * END BEST SELLERS */
 
-                                            /* ! FOOTER CSS */
+/* ! FOOTER CSS */
 
 footer {
   display: flex;
   padding: calc(1px + 0.8vw);
   justify-content: space-evenly;
-  background-color: #B22222;
+  background-color: #000000;
+  color: #fff;
   position: relative;
+  /* top: 470px; */
 }
 
 .about {
@@ -349,7 +374,7 @@ footer {
 
 .about p {
   padding-bottom: 5%;
-  text-align:justify;
+  text-align: justify;
   color: #FFF0F5;
   font-size: calc(5px + 0.6vw);
   /* border: 2px solid black; */
@@ -361,14 +386,14 @@ footer {
 }
 
 .book,
-.help{
+.help {
   display: flex;
   flex-direction: column;
   width: 30%;
 }
 
 .book h4,
-.help h4{
+.help h4 {
   color: #FFF0F5;
   margin: 2%;
   font-size: calc(10px + 0.8vw);
@@ -376,20 +401,19 @@ footer {
 }
 
 .book ul,
-.help ul{
+.help ul {
   align-self: center;
 }
 
 .book ul li,
-.help ul li{
+.help ul li {
   list-style: none;
   font-size: calc(7px + 0.9vw);
   margin: calc(2px + 0.5vw);
 }
 
 .book ul li a,
-.help ul li a{
+.help ul li a {
   text-decoration: none;
   color: #FFF0F5;
 }
-
