--- a/Public/CSS/List.css
+++ b/Public/CSS/List.css
@@ -6,42 +6,47 @@
   margin: 0;
 }
 body{
-  background: url("/Images/background.jpg");
+  background-image: url("/Images/back.png");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
 }
 
 /* ! HEADER CSS */
 
-header {
+header{
   display: flex;
   justify-content: space-between;
-  background-color: #CD853F;
-  /* min-height: ; */
+  /* background-color: #CD853F; */
+  background-color: #000000;
+  color:#fff;
 }
 
 /* * START LOGO */
-.logot {
+.logot{
   display: flex;
   align-items: center;
   cursor: pointer;
 }
 
-.logot img {
+.logot img{
   width: 50px;
   padding: 4%;
 }
 
-.logot h2 {
+.logot h2{
   padding-left: calc(1px + 0.6vw);
   padding-right: calc(1px + 0.6vw);
   font-size: calc(5px + 1.3vw);
   font-weight: 600;
 }
-
 /* *END LOGO */
 
 /* * START NAVIGATION BAR */
 .menuDiv {
-  background-color: #F4A460;
+  /* margin-left: 70px; */
+  margin-left: calc(7px + 8vw);
+  background-color: #000000;
   color: #2e70a9;
   border-radius: 10px;
 }
@@ -49,25 +54,24 @@ header {
 .menuDiv ul {
   display: flex;
 }
-
 .menuDiv ul li {
   list-style: none;
 }
 
 .menuDiv ul li a {
-  color: black;
+  color: rgb(255, 255, 255) ;
   text-decoration: none;
   padding: calc(3px + 1.12vw);
-  display: flex;
+  display:  flex;
   align-content: center;
-  font-size: calc(2px + 1vw);
+  font-size: calc(2px + 1.1vw);
   transition: ease-in-out all .3s;
   text-align: center;
 }
 
 .menuDiv ul li a:hover {
   color: #fff;
-  font-size: calc(4px + 0.91vw);
+  font-size: calc(4px + 1vw);
   background: #2e70a9;
 }
 
@@ -84,22 +88,27 @@ header {
   border-top-right-radius: 7px;
   border-bottom-right-radius: 7px;
 }
-
 /* * END NAVIGATION BAR */
 
 /* * START PROFILE MENU */
-.profile {
-  /* background-color: chocolate; */
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
-}
-
-.prof_photo {
-  width: calc(8px + 3vw);
-  padding-right: calc(0.5px + 1vw);
-  padding-left: calc(0.5px + 1vw);
-}
+.profile , .cart {
+    /* background-color: chocolate; */
+    display: flex;
+    align-items:center;
+    justify-content:flex-end;
+  }
+  
+  .prof_photo {
+    width: calc(8px + 3vw);
+    padding-right: calc(0.5px + 1vw);
+    padding-left: calc(0.5px + 1vw);
+  }
+  
+  .cart_photo{
+    width: calc(8px + 3vw);
+    padding-right: calc(1px + 1vw);
+    cursor:pointer;  
+  }
 
 .profile form input {
   width: calc(5px + 13vw);
@@ -123,10 +132,10 @@ input::-webkit-input-placeholder {
   cursor: pointer;
   border-top-right-radius: 5px;
   border-bottom-right-radius: 5px;
-  width: calc(25px + 0.8vw);
+  width: calc(26px + 0.8vw);
 }
 
-.profile form button img {
+.profile form button img{
   width: calc(5px + 1.3vw);
 }
 
@@ -138,12 +147,14 @@ input::-webkit-input-placeholder {
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: #cd753f;
+  background-color: #000000;
+  color: #fff;
   border-radius: 10px;
+  margin-left: calc(2px + 0.5vw);
 }
 
 .dropdown-content a {
-  color: black;
+  color: #fff;
   padding: calc(1px + 0.5vw);
   text-decoration: none;
   display: block;
@@ -151,15 +162,19 @@ input::-webkit-input-placeholder {
 }
 
 .dropdown-content .t:hover {
-  background-color: #CD853F;
+  background-color: #2e70a9;
   border-top-right-radius: 10px;
   border-top-left-radius: 10px;
 }
 
 .dropdown-content .b:hover {
-  background-color: #CD853F;
+  background-color: #2e70a9;
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
+}
+
+.dropdown-content .m:hover {
+  background-color: #2e70a9;
 }
 
 .dropdown:hover .dropdown-content {
@@ -178,14 +193,18 @@ input::-webkit-input-placeholder {
   background-position: 5%;
   margin-right: 25px;
 }
-
-
 .list-view .view_item {
-  background: linear-gradient(90deg, rgb(219, 165, 107), #E38B29);
-  border: 2px solid rgba(205, 117, 63, 0.73);
+  /* background: linear-gradient(90deg, rgb(219, 165, 107), #E38B29); */
+  background: linear-gradient(90deg, rgba(132, 131, 130, 0.717), #575757b1);
+  border: 3px solid rgba(0, 0, 0, 0.73);
   padding: 0.8% 1.5%;
+  margin-top: 40px;
   display: flex;
   align-items: center;
+  width:70%;
+  margin-left: auto;
+  margin-right: auto;
+  z-index: -100;
 }
 
 @keyframes gradient {
@@ -199,23 +218,25 @@ input::-webkit-input-placeholder {
     background-position: 0% 50%;
   }
 }
-
+.list-view{
+  margin-bottom: 20px;
+}
 .list-view .view_item .vi_left{
   margin-right: 1.9%;
 }
 
 .view_item .title{
-  font-weight: 600;
+  font-weight: 700;
   cursor: pointer;
 }
 .view_item .author{
-  font-weight: 400;
+  font-weight: 500;
 }
 
 .view_item .content{
   margin: 5px 0;
   font-size: calc(5px + 0.7vw);
-  font-weight: 200;
+  font-weight: 400;
 }
 
 .view_item .btns{
@@ -226,12 +247,12 @@ input::-webkit-input-placeholder {
 .view_item .btn1,.btn2 {
   font-size: calc(3px + 0.8vw);
   width: calc(20px + 6.2vw);
-  background: rgba(205, 117, 63, 0.76);
+  background: rgba(0, 0, 0, 0.76);
   padding: 0.6%;
   border-radius: 5px;
   color: #ffffff;
   text-align: center;
-  font-weight: 200;
+  font-weight: 250;
   cursor: pointer;
 }
 .view_item .btn2{
@@ -239,7 +260,7 @@ input::-webkit-input-placeholder {
 }
 
 .view_item .btn1:hover , .btn2:hover {
-  background: #cd753f;
+  background: rgba(60, 56, 56, 0.717);
 }
 
 .author{
@@ -249,15 +270,14 @@ input::-webkit-input-placeholder {
   font-size: calc(5px + 0.8vw);
 }
 
-/* ! FOOTER CSS */
-
 footer {
   display: flex;
   padding: calc(1px + 0.8vw);
   justify-content: space-evenly;
-  background-color: #B22222;
+  background-color: #000000;
+  color:#fff;
   position: relative;
-  bottom: 0px;
+  /* top: 470px; */
 }
 
 .about {
@@ -315,5 +335,4 @@ footer {
 .help ul li a{
   text-decoration: none;
   color: #FFF0F5;
-}
-
+ }
