--- a/Public/CSS/Product.css
+++ b/Public/CSS/Product.css
@@ -6,41 +6,46 @@
   margin: 0;
 }
 body{
-  background: url("/Images/background.jpg");
+  background-image: url("/Images/back.png");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
   
 }
 
-header {
+header{
   display: flex;
   justify-content: space-between;
-  background-color: #CD853F;
-  /* min-height: ; */
+  /* background-color: #CD853F; */
+  background-color: #000000;
+  color:#fff;
 }
 
 /* * START LOGO */
-.logot {
+.logot{
   display: flex;
   align-items: center;
   cursor: pointer;
 }
 
-.logot img {
+.logot img{
   width: 50px;
   padding: 4%;
 }
 
-.logot h2 {
+.logot h2{
   padding-left: calc(1px + 0.6vw);
   padding-right: calc(1px + 0.6vw);
   font-size: calc(5px + 1.3vw);
   font-weight: 600;
 }
-
 /* *END LOGO */
 
 /* * START NAVIGATION BAR */
 .menuDiv {
-  background-color: #F4A460;
+  /* margin-left: 70px; */
+  margin-left: calc(7px + 8vw);
+  background-color: #000000;
   color: #2e70a9;
   border-radius: 10px;
 }
@@ -48,25 +53,24 @@ header {
 .menuDiv ul {
   display: flex;
 }
-
 .menuDiv ul li {
   list-style: none;
 }
 
 .menuDiv ul li a {
-  color: black;
+  color: rgb(255, 255, 255) ;
   text-decoration: none;
   padding: calc(3px + 1.12vw);
-  display: flex;
+  display:  flex;
   align-content: center;
-  font-size: calc(2px + 1vw);
+  font-size: calc(2px + 1.1vw);
   transition: ease-in-out all .3s;
   text-align: center;
 }
 
 .menuDiv ul li a:hover {
   color: #fff;
-  font-size: calc(4px + 0.91vw);
+  font-size: calc(4px + 1vw);
   background: #2e70a9;
 }
 
@@ -83,22 +87,27 @@ header {
   border-top-right-radius: 7px;
   border-bottom-right-radius: 7px;
 }
-
 /* * END NAVIGATION BAR */
 
 /* * START PROFILE MENU */
-.profile {
-  /* background-color: chocolate; */
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
-}
-
-.prof_photo {
-  width: calc(8px + 3vw);
-  padding-right: calc(0.5px + 1vw);
-  padding-left: calc(0.5px + 1vw);
-}
+.profile , .cart {
+    /* background-color: chocolate; */
+    display: flex;
+    align-items:center;
+    justify-content:flex-end;
+  }
+  
+  .prof_photo {
+    width: calc(8px + 3vw);
+    padding-right: calc(0.5px + 1vw);
+    padding-left: calc(0.5px + 1vw);
+  }
+  
+  .cart_photo{
+    width: calc(8px + 3vw);
+    padding-right: calc(1px + 1vw);
+    cursor:pointer;  
+  }
 
 .profile form input {
   width: calc(5px + 13vw);
@@ -125,7 +134,7 @@ input::-webkit-input-placeholder {
   width: calc(26px + 0.8vw);
 }
 
-.profile form button img {
+.profile form button img{
   width: calc(5px + 1.3vw);
 }
 
@@ -137,12 +146,14 @@ input::-webkit-input-placeholder {
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: #cd753f;
+  background-color: #000000;
+  color: #fff;
   border-radius: 10px;
+  margin-left: calc(2px + 0.5vw);
 }
 
 .dropdown-content a {
-  color: black;
+  color: #fff;
   padding: calc(1px + 0.5vw);
   text-decoration: none;
   display: block;
@@ -150,15 +161,19 @@ input::-webkit-input-placeholder {
 }
 
 .dropdown-content .t:hover {
-  background-color: #CD853F;
+  background-color: #2e70a9;
   border-top-right-radius: 10px;
   border-top-left-radius: 10px;
 }
 
 .dropdown-content .b:hover {
-  background-color: #CD853F;
+  background-color: #2e70a9;
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
+}
+
+.dropdown-content .m:hover {
+  background-color: #2e70a9;
 }
 
 .dropdown:hover .dropdown-content {
@@ -173,8 +188,8 @@ input::-webkit-input-placeholder {
 }
 
 .list-view .view_item {
-  background: linear-gradient(90deg, rgb(219, 165, 107), #E38B29);
-  border: 2px solid rgba(205, 117, 63, 0.73);
+  background: linear-gradient(90deg, rgb(231, 214, 197), #979595b4);
+  border: 2px solid rgba(86, 84, 83, 0.73);
   padding: 10px 20px;
   display: flex;
 }
@@ -199,12 +214,11 @@ input::-webkit-input-placeholder {
 .view_item .title{
   font-weight: 600;
   font-size: 40px;
-
 }
 
 .view_item .author{
   font-weight: 400;
-  font-size: 20px;
+  font-size: 30px;
 }
 
 .view_item .content{
@@ -221,20 +235,23 @@ input::-webkit-input-placeholder {
   margin-top: 55px;
 }
 
-.view_item .btn1 {
-  width: 150px;
-  background: rgba(205, 117, 63, 0.76);
-  padding: 4px;
+.view_item .btn1,.btn2 {
+  width: 140px;
+  background: rgba(232, 224, 219, 0.76);
+  padding: 8px;
   border-radius: 5px;
-  color: #ffffff;
+  font-weight: 400;
+  color: #000000;
   text-align: center;
-  font-weight: 200;
   cursor: pointer;
 }
+.view_item .btn2{
+  margin-left: 10px;
+}
 
-
-.view_item .btn1:hover {
-  background: #cd753f;
+.view_item .btn1:hover , .btn2:hover {
+  background: #010101;
+  color: white;
 }
 .view_item .authorn{
   width: auto;
@@ -264,104 +281,65 @@ footer {
   display: flex;
   padding: calc(1px + 0.8vw);
   justify-content: space-evenly;
-  background-color: #B22222;
+  background-color: #000000;
+  color:#fff;
   position: relative;
-  width: 100%;
-  flex: 0 ;
+  /* top: 470px; */
 }
 
 .about {
-  margin: 1px;
-  width: 300px;
+  width: 30%;
 }
 
 .about h4 {
-  padding: 10px;
+  margin: 2%;
   text-align: center;
-  font-size: 20px;
+  font-size: calc(10px + 0.8vw);
   color: #FFF0F5;
 }
 
 .about p {
-  padding-left: 25px;
-  padding-right: 10px;
-  padding-top: 10px;
-  padding-bottom: 20px;
-  text-align: justify;
+  padding-bottom: 5%;
+  text-align:justify;
   color: #FFF0F5;
-  font-size: 13px;
+  font-size: calc(5px + 0.6vw);
   /* border: 2px solid black; */
 }
 
 .cont {
-  padding-left: 25px;
-  padding-right: 10px;
   color: #FFF0F5;
-  font-size: 14px;
+  font-size: calc(8px + 0.6vw);
 }
 
-.book {
+.book,
+.help{
   display: flex;
   flex-direction: column;
+  width: 30%;
 }
 
-.book h4 {
+.book h4,
+.help h4{
   color: #FFF0F5;
-  padding: 10px;
-  font-size: 20px;
+  margin: 2%;
+  font-size: calc(10px + 0.8vw);
   text-align: center;
 }
 
-.book ul {
-  padding: 2px;
-  width: 200.5px;
+.book ul,
+.help ul{
+  align-self: center;
 }
 
-.book ul li {
-  display: flex;
+.book ul li,
+.help ul li{
   list-style: none;
-  margin: 5px 50px 5px 50px;
-  align-items: flex-start;
-  font-size: 18px;
-  margin-top: 15px;
+  font-size: calc(7px + 0.9vw);
+  margin: calc(2px + 0.5vw);
 }
 
-.book ul li a {
+.book ul li a,
+.help ul li a{
   text-decoration: none;
   color: #FFF0F5;
-}
-
-.help {
-  display: flex;
-  flex-direction: column;
-  margin: 1px;
-}
-
-.help h4 {
-  color: #FFF0F5;
-  padding: 10px;
-  font-size: 20px;
-  text-align: center;
-}
-
-.help ul {
-  padding: 2px;
-  width: 100%;
-}
-
-.help ul li {
-  display: flex;
-  list-style: none;
-  margin: 5px 50px 5px 50px;
-  align-items: flex-start;
-  font-size: 20px;
-  margin-top: 15px;
-}
-
-.help ul li a {
-  color: #FFF0F5;
-  text-decoration: none;
-}
-.list-view{
-  width:fit-content;
-}
+ }
